<package format="3">
  <name>inertial_sense_ros</name>
  <version>1.1.1</version>
  <description>
  This package provides a ROS interface to the InertialSense GPS-INS sensor
  </description>
  <maintainer email="devteam@inertialsense.com">IS Dev Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>rosidl_default_generators</depend> -->
  <!-- <depend>tf2</depend> -->
  <depend>diagnostic_msgs</depend>
  
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->

  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
</package>
